# elzac

./: CMakeLists.txt  sapphire.txt
include/: alsa_card.h  alsa_card_model.h  alsa_ctl.h  alsa_mixer_model.h  osc_action.h  osc_client.h  osc_message.h  osc_server.h  sigwatch.h
src/: alsa_card.cpp  alsa_card_model.cpp  alsa_ctl.cpp  alsa_mixer_model.cpp  main.cpp  osc_action.cpp  osc_client.cpp  osc_message.cpp  osc_server.cpp  sigwatch.cpp
